# CoMD-RHT

./: CMakeLists.txt  CoMD.c  CoMD_info.h  Makefile  README.md  README_COMD  RHT.c  RHT.h  cmdLineParser.c  decomposition.c  eam.c  eam.h  haloExchange.c  haloExchange.h  initAtoms.c  initAtoms.h  linkCells.c  linkCells.h  ljForce.c  memUtils.h  myScriptCOMD.sh  mycommand.c  parallel.c  parallel.h  performanceTimers.c  performanceTimers.h  runChifflet.sh  runDifferentSizes.sh  runEcotype-testHT.sh  runEcotype.sh  runHT.sh  runNova.sh  runVarGrouping.sh  timestep.c  timestep.h  yamlOutput.c
examples/: mpi-strongScaling.sh  mpi-weakScaling.sh  outputCoMD.txt
